fixed text wrapping issue

--- a/src/components/Community Posts/Community_Posts.css
+++ b/src/components/Community Posts/Community_Posts.css
@@ -25,7 +25,7 @@
   100% { opacity: 1; }
 }
 
-.post-text {
+/* .post-text {
   margin-top: 0.5rem;
   margin-bottom: 1rem;
   width: 90%;
@@ -33,10 +33,9 @@
   overflow: hidden;
   display: block;
   overflow: hidden;
-  white-space: nowrap;
   text-align: center;
   text-overflow: ellipsis;
-}
+} */
 
 
 .communiytPost h3{
