--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -1,19 +1,18 @@
 .post-container {
-  /* border: 2px solid green; */
-  /* height: 90vh; */
+  height: 100%;
   width: 75%;
   display: flex;
   flex-direction: column;
-  padding: 1rem;
+  padding: 0.5rem;
+  
 }
 
 .post {
-  /* border: 2px solid red; */
-  /* height: 1000px; */
-  /* width: 500px; */
-  padding: 1rem;
+  height: 100%;
+  padding: 0.5rem;
   overflow-y: scroll; 
   overflow-x:hidden;
+  
 }
 
 .postimage {
@@ -28,6 +27,14 @@
 }
 
 .post-text {
+  width: 100%;
+  height: 100%;
+  word-wrap: break-word;
+}
+
+.post-text p {
+  width: 100%;
+  word-wrap: break-word;
   /* overflow-wrap: break-word; */
 }
 
